--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Zexxa API | Landing Page</title>
+    <title>CIYO API | Landing Page</title>
 <!--
 
 Lava Landing Page
@@ -50,14 +50,14 @@ https://templatemo.com/tm-540-lava-landing-page
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            ZEXXA API
+                            CIYO API
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">Home</a></li>
                             <li class="scroll-to-section"><a href="#about" class="menu-item">About</a></li>
-                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Testimonials</a>
+                    <!--        <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Testimonials</a>-->
                             </li>
                         </ul>
                         <a class='menu-trigger'>
