--- a/views/home.html
+++ b/views/home.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-540-lava-landing-page
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">Home</a></li>
                             <li class="scroll-to-section"><a href="#about" class="menu-item">About</a></li>
-                    <!--        <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Testimonials</a>-->
+                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Testimonials</a>
                             </li>
                         </ul>
                         <a class='menu-trigger'>
@@ -81,9 +81,9 @@ https://templatemo.com/tm-540-lava-landing-page
                 <div class="row">
                     <div class="left-text col-lg-6 col-md-12 col-sm-12 col-xs-12"
                         data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <h1>Simple Restful API <em>Zexxa</em></h1>
-                        <p>This is <a href="#">Landing Page from Zexxa API</a> Click <a href="/docs.html">THIS </a>To see Dashboard
-                           You can use our DOCS for free, no CC or any private information, I am always update feature every week. <a href="https://chat.whatsapp.com/L9dmhq8vUdILjf1vHy41LQ">Click Here For More Info</a>.</p> 
+                        <h1>Simple Restful API <em>Ciyo</em></h1>
+                        <p>This is <a href="#">Landing Page from Ciyo API</a> Click <a href="/docs.html">THIS </a>To see Dashboard
+                           You can use our DOCS for free, no CC or any private information, I am always update feature every week.</p> 
                         <a href="#about" class="main-button-slider">KNOW US BETTER</a>
                     </div>
                 </div>
@@ -326,14 +326,14 @@ https://templatemo.com/tm-540-lava-landing-page
                     <br>
                     <br>
                     <div class="right-content col-lg-6 col-md-12 col-sm-12">
-                        <h2>More About <em>Zexxa API</em></h2>
-                        <p>Zexxa API is a website that provides various API services, you can use it for free!.
+                        <h2>More About <em>Ciyo API</em></h2>
+                        <p>Ciyo API is a website that provides various API services, you can use it for free!.
                             <br><br>If you want to complain and provide suggestions, please contact the social media below.</p>
                         <ul class="social">
-                            <li><a href="https://fb.com/fauzixliljee"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://github.com/Kira-Master"><i class="fa fa-github"></i></a></li>
-                            <li><a href="https://chat.whatsapp.com/L9dmhq8vUdILjf1vHy41LQ"><i class="fa fa-whatsapp"></i></a></li>
-                            <li><a href="https://instagram.com/paujikerenbanget"><i class="fa fa-instagram"></i></a></li>
+                    <!---        <li><a href="https://fb.com/fauzixliljee"><i class="fa fa-facebook"></i></a></li> -->
+                            <li><a href="https://github.com/RhmttCore"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://chat.whatsapp.com/0"><i class="fa fa-whatsapp"></i></a></li>
+                     <!---       <li><a href="https://instagram.com/paujikerenbanget"><i class="fa fa-instagram"></i></a></li> -->
                         </ul>
                     </div>
                 </div>
@@ -341,7 +341,7 @@ https://templatemo.com/tm-540-lava-landing-page
             <div class="row">
                 <div class="col-lg-12">
                     <div class="sub-footer">
-                        <p>Copyright &copy; 2023 Kira - Master</p>
+                        <p>Copyright &copy; 2024 RhmttCore</p>
                     </div>
                 </div>
             </div>
