--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Rest Api - ZexxaDev</title>
+    <title>Rest Api - RhmttDev</title>
     <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="vendors/flag-icon-css/css/flag-icon.min.css">
@@ -17,11 +17,11 @@
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7Wk6KnE7aJHUHjpp_wBoDfkeSIOQfSGMmxg&usqp=CAU"><link rel="stylesheet" href="ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css">
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7Wk6KnE7aJHUHjpp_wBoDfkeSIOQfSGMmxg&usqp=CAU"><link rel="stylesheet" href="ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css">
     <script src="ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.js"></script>
-   <meta name="description" content="Zexxabot - API">
+   <meta name="description" content="RhmttDev - API">
    <meta property="og:image" content="https://i.ibb.co/gjbZGxy/IMG-20210521-WA0673.png">
-   <meta property="og:site_name" content="EKA PI">
+   <meta property="og:site_name" content="CIYO API">
    <meta name="keywords" content="REST API">
-   <meta name="author" content="Alpha Gans">
+   <meta name="author" content="RhmttDev">
   </head>
   <body>
   <body id="page-top" onload="getvisitor();">
@@ -41,8 +41,8 @@
                   <span class="count bg-success"></span>
                 </div>
                 <div class="profile-name">
-                  <h5 class="mb-0 font-weight-normal">Kira-Master</h5>
-                  <span>Masih Pemula Om :(</span>
+                  <h5 class="mb-0 font-weight-normal">RhmttDev</h5>
+                  <span>Developer</span>
                 </div>
               </div>
             </div>
