--- a/views/home.html
+++ b/views/home.html
@@ -44,7 +44,7 @@
 
 
 
-  <body class="leading-normal tracking-normal text-indigo-400 m-6 bg-cover bg-fixed" style="background-image: url('header.png');">
+  <body class="leading-normal tracking-normal text-indigo-400 m-6 bg-cover bg-fixed" style="background-image: url('https://telegra.ph/file/17525839a2badd551aa83.jpg');">
 
     <div class="h-full">
 
